--- a/src/LoginInterface.css
+++ b/src/LoginInterface.css
@@ -55,7 +55,7 @@ input[type=text] {
 }
 
 /* THIS BTN IS TO OPEN CREATE ACCOUNT MENU -- DOES NOT CREATE A NEW ACCOUNT FOR USER */
-.createAccountbtn{
+.openCreateAccountbtn{
     background:none;
     border:none;
     margin: 0em 90%;
@@ -64,13 +64,13 @@ input[type=text] {
     color: #84bd00;
 }
 
-.createAccountbtn:hover {
+.openCreateAccountbtn:hover {
     /* background-color: #84bd00;  */
     color: #afda77;
 }
 
 /* THIS BTN IS TO CREATE AN ACCOUNT FOR USER */
-.createAccountbtn2{
+.createAccountbtn{
     background:none;
     margin: 2em 31%;
     border-color: #84bd00;
@@ -80,7 +80,7 @@ input[type=text] {
     font-size: 13px;
 }
 
-.createAccountbtn2:hover {
+.createAccountbtn:hover {
     /* background-color: #84bd00;  */
     color: #afda77;
     border-color: #afda77;
