Remove trailing curly bracket, remoe unneeded margin.

--- a/src/LoginInterface.css
+++ b/src/LoginInterface.css
@@ -58,7 +58,7 @@ input[type=text] {
 .openCreateAccountbtn{
     background:none;
     border:none;
-    margin: 0em 85%;
+    margin: 0em auto;
     cursor: pointer;
     color: #84bd00;
     white-space: nowrap;
