--- a/client/src/components/CourseListSideBar/CourseListSideBar.css
+++ b/client/src/components/CourseListSideBar/CourseListSideBar.css
@@ -10,8 +10,15 @@
     z-index: 200;
     transform: translateX(100%);
     transition: transform 0.3s ease-out;
+
+    display: flex;
+    flex-direction: column;
   }
   
   .side-drawer.open {
     transform: translateX(0);
+  }
+
+  #sidebar-divider{
+    width: 90%;
   }
