Fixing merge conflicts and updating code to correct formatting

--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -13,13 +13,8 @@ body{
 .Menu{
     background-color: #201e21;
     width: 50%;
-    padding: 2% 5%;
-    margin: 10% 20%;
-    display: inline-block; 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+    padding: 2em 4em;
+    margin: 10% auto;   
 }
 
 input[type=text] {
@@ -56,11 +51,10 @@ input[type=text] {
 .openDiffMenubtn{
     background:none;
     border:none;
-    margin: 0em 85%;
     cursor: pointer;
     color: #84bd00;
-    white-space: nowrap;
-    overflow: hidden;
+    font-size: 1em;
+    display: block;
 }
 
 a{
@@ -73,14 +67,13 @@ a:hover {
 /* THIS BTN IS TO CREATE AN ACCOUNT FOR USER */
 .createAccountbtn{
     background:none;
-    margin: 2em 31%;
+    margin: 2em auto;
     border-color: #84bd00;
-    padding:0.5% 10%;
+    padding:1em 2em;
     cursor: pointer;
     color: #84bd00;
-    font-size: 13px;
-    white-space: nowrap;
-    overflow: hidden;
+    font-size: 1em;
+    display: block;
 }
 
 .createAccountbtn:hover {
