--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -17,7 +17,7 @@ body{
     margin: 10% auto;   
 }
 
-input[type=text] {
+.InputElement{
     width: 100%;
     padding: 12px 20px;
     margin: 1em 0;
@@ -31,20 +31,27 @@ input[type=text] {
 /* BTN ALLOWS USER TO LOG INTO VCP */
 .loginbtn{
     width: 50%;
-    padding: 9px 20px;
-    margin: 2em 10em;
+    padding: 1em 1em;
+    margin: 2em auto;
     box-sizing: border-box;
     font-size: 1em;
     text-align: center;
     color: #9c9b9d;
     background-color: #333035;
     border: none;
+    display: block;
+    cursor: pointer;
 
 }
 
 .loginbtn:hover {
     background-color: #84bd00; 
     color: black;
+}
+
+.loginbtn:disabled{
+    cursor: not-allowed;
+
 }
 
 /* THIS BTN IS TO OPEN DIFFERENT MENU THEN WHAT IS ACTIVE*/
@@ -82,3 +89,10 @@ a:hover {
     border-color: #afda77;
 }
 
+.create-accountbtn:disabled{
+    cursor: not-allowed;
+}
+
+.Invalid{
+    border: 1px solid red;
+}
