--- a/client/src/components/CloseSideBarBtn/CloseSideBarBtn.css
+++ b/client/src/components/CloseSideBarBtn/CloseSideBarBtn.css
@@ -1,16 +1,3 @@
-
-.close-sidebarbtn {
-    background:none;
-    border:none;
-    margin: 0em auto;
-    cursor: pointer;
-    color: #84bd00;
-    white-space: nowrap;
-    overflow: hidden;
-
-    float: right;
-}
-
-.close-sidebarbtn:focus {
-    outline: none;
+#close-sidebarbtn {
+  float: right;
 }
