--- a/client/src/components/CourseListSideBar/CourseListSideBar.css
+++ b/client/src/components/CourseListSideBar/CourseListSideBar.css
@@ -13,12 +13,9 @@
 
     display: flex;
     flex-direction: column;
+    padding: 1em;
   }
   
   .side-drawer.open {
     transform: translateX(0);
-  }
-
-  #sidebar-divider{
-    width: 90%;
   }
