--- a/client/src/containers/Main.css
+++ b/client/src/containers/Main.css
@@ -42,7 +42,7 @@
   height: 100%;
 }
 
-.sidebar-info-area * {
+.sidebar-info-area > * {
   min-width: 130px;
   display: block;
 }
@@ -80,6 +80,10 @@
   font-size: 1em;
 }
 
+.sidebar-button:focus {
+  outline: none;
+}
+
 .sidebar-button:hover {
   color: #afda77;
 }
@@ -88,7 +92,6 @@
   background-color: black;
   color: #e4e4e4;
   border: none;
-  border-radius: 3px;
   height: 71%;
   width: 100%;
   resize: none;
@@ -96,9 +99,9 @@
   font-size: 1em;
 }
 
-.notes-text-area:focus {
+.focus-element:focus {
   outline: none;
-  border: 2px solid #84bd00;
+  border: 1px solid #84bd00;
 }
 
 .student-buttons-container {
