--- a/client/src/components/WarningSnackbar/WarningSnackbar.css
+++ b/client/src/components/WarningSnackbar/WarningSnackbar.css
@@ -7,16 +7,18 @@
     -webkit-animation: fadein 0.5s;
     animation: fadein 0.5s;
 
-    min-width: 250px;
-    margin-left: -5em;
+    width: 250px;
     background-color: #c5980f; 
     color: black;
     text-align: center; 
     border-radius: 0.2em;
     padding: 0.2em; 
-    position: fixed; 
-    z-index: 1; 
-    left: 45em; 
+    position: absolute; 
+    z-index: 1;
+    left: 0;
+    right: 0; 
+    margin-left: auto;
+    margin-right: auto;
     bottom: 2em; 
    
 }
@@ -32,11 +34,12 @@
     to {bottom: 30px; opacity: 1;}
 }
 
-#close-snackbar-btn{
+#close-snackbar-btn {
     cursor: pointer;
+    float: right;
 }
 
-.warning-message-container{
+.warning-message-container {
     padding: 0;
     margin: 0;
     overflow: hidden;
