--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -28,8 +28,7 @@ body{
     border: none;
 }
 
-/* BTN ALLOWS USER TO LOG INTO VCP */
-.loginbtn{
+.deafultbtn{
     width: 50%;
     padding: 1em 1em;
     margin: 2em auto;
@@ -44,12 +43,12 @@ body{
 
 }
 
-.loginbtn:hover {
+.deafultbtn:hover {
     background-color: #84bd00; 
     color: black;
 }
 
-.loginbtn:disabled{
+.deafultbtn:disabled{
     cursor: not-allowed;
 
 }
