--- a/client/src/components/Input/input.css
+++ b/client/src/components/Input/input.css
@@ -1,12 +1,50 @@
 .input-element{
     width: 100%;
     padding: 12px 20px;
-    margin: 1em 0;
+    margin: 1em auto;
     box-sizing: border-box;
     font-size: 1em;
     color: #9c9b9d;
     background-color: #333035;
     border: none;
+    
+
+    /* display:  inherit; */
+    /* flex-direction: row-reverse; */
+    /* float: left; */
+}
+
+.input-element:focus{
+    outline: none;
+}
+
+.select-items {
+    width: 15em;
+    padding: 12px 20px;
+    margin: 2em 0;
+    box-sizing: border-box;
+    font-size: 1em;
+    color: #9c9b9d;
+    background-color: #333035;
+    border: none;
+    display: flex;  
+    /* -webkit-appearance: none; */
+    /* -webkit-menulist: inherit; */
+    /* -webkit-appearance: none; 
+    -moz-appearance: none; */
+  
+
+    /* clear: left; */
+    /* float: left; */
+}
+
+.select-items:hover {
+    background-color: #84bd00;
+    color: white;
+}
+
+.select-items:focus{
+    outline: none;
 }
 
 .invalid{
@@ -19,3 +57,7 @@
     text-transform: uppercase;
     margin: 1em auto;
 }
+
+
+
+
