Change Warning Snackbar width from px to em

--- a/client/src/components/WarningSnackbar/WarningSnackbar.css
+++ b/client/src/components/WarningSnackbar/WarningSnackbar.css
@@ -7,7 +7,7 @@
     -webkit-animation: fadein 0.5s;
     animation: fadein 0.5s;
 
-    width: 250px;
+    width: 15em;
     background-color: #c5980f; 
     color: black;
     text-align: center; 
