added link to course-history page

--- a/client/src/components/UserProfile/profile.css
+++ b/client/src/components/UserProfile/profile.css
@@ -83,11 +83,13 @@ body{
 
 a:link{
     text-decoration: none;
+    text-transform: uppercase;
+
 }
 
 
 .btn-div{
-    margin: 4em 0em;
+    margin: 4em -1em;
     display: flex;
     flex-direction: row;
     /* text-align: center;  */
