--- a/client/src/components/FilterMultiSelect/multiSelectMenu.css
+++ b/client/src/components/FilterMultiSelect/multiSelectMenu.css
@@ -1,23 +1,25 @@
-.yoshi{
+/* UBCO COURSES OFFERRED -- UPLOADED BY ADMINS */
+.ubco-offered-courses-list{
     color:red;
-    width: 23em;
+    width: 50%;
     /* padding: 12px 20px; */
     margin: 2em 0;
     box-sizing: border-box;
     font-size: 1em;
-    /* color: #9c9b9d; */
-  
     /* background-color: #333035; */
-    background-color: purple;
     border: none;
     display: flex;
     flex-direction: column;
+    float: left;
+    box-sizing: border-box;
+  
+
 }
 
 .FilteredMultiSelect__filter{
     width: auto;
     padding: 10px 20px;
-    /* margin: 1em auto; */
+    margin: 0em 0em 1em 0em;
     box-sizing: border-box;
     font-size: 1em;
     color: #9c9b9d;
@@ -27,6 +29,22 @@
 }
 
 .FilteredMultiSelect__filter:focus{
+    outline: none;
+}
+
+.FilteredMultiSelect__select{
+    width: auto;
+    height: 30em;
+    padding: 1em 1em;
+    box-sizing: border-box;
+    font-size: 1em;
+    color: #84bd00;
+    background-color: #333035;
+    border: none;
+    overflow: scroll;
+}
+
+.FilteredMultiSelect__select:focus{
     outline: none;
 }
 
@@ -49,20 +67,38 @@
     color: black;
 }
 
-.FilteredMultiSelect__select{
-    width: auto;
-    padding: 10px 20px;
-    /* margin: 1em auto; */
-    box-sizing: border-box;
-    font-size: 1em;
-    color: #84bd00;
-    background-color: #333035;
-    border: none;
-}
-
+/* CHOSEN COURSES BY STUDENTS IN WHICH THAT HAVE RECIEVED CREDITS FOR */
 .added-courses{
-    color:orange;
+    color: #9c9b9d;
+    align-content: left;
     display: flex;
     justify-content: flex-end;
     float:right;
+    width: 23em;
+    height: 34em;
+    background-color: #333035;
+    margin: 2em 0;
+    box-sizing: border-box;
+    padding:3em;
+    overflow: scroll;
+}
+
+.remove-coursebtn{
+    color:orange;
+    width: 3em;
+    background:none;
+    border: none;
+}
+
+.remove-coursebtn:focus{
+    outline: none;
+}
+
+.remove-coursebtn:hover{
+    color:  #84bd00;
+}
+
+.yoshii{
+    list-style: none;
+    align-items:left;
 }
