--- a/client/src/components/FilterMultiSelect/multiSelectMenu.css
+++ b/client/src/components/FilterMultiSelect/multiSelectMenu.css
@@ -69,7 +69,7 @@
 
 /* CHOSEN COURSES BY STUDENTS IN WHICH THAT HAVE RECIEVED CREDITS FOR */
 .added-courses{
-    color: #9c9b9d;
+    color: #84bd00;
     align-content: left;
     display: flex;
     justify-content: flex-end;
