trying to fix css:hover for menus

--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -28,9 +28,9 @@ body{
     border: none;
 }
 
-/* .input-element:focus{
+.input-element:focus{
     border: none;
-} */
+}
 
 .deafultbtn{
     width: 50%;
