--- a/client/src/components/UserProfile/profile.css
+++ b/client/src/components/UserProfile/profile.css
@@ -14,7 +14,6 @@ body{
      color: #84bd00;
      font-weight: normal;
      text-transform: uppercase;
-     margin: 1em auto;
 }
 
 .yellow-title{
@@ -91,8 +90,7 @@ a:link{
 .btn-div{
     margin: 4em -1em;
     display: flex;
-    flex-direction: row;
-    /* text-align: center;  */
+    flex-direction: reverse;
 }
 
 .link-to-course-history{
