Rework drag and drop to rebuild terms when plan changs.

--- a/client/src/components/Planner/PlannerArea.css
+++ b/client/src/components/Planner/PlannerArea.css
@@ -1,16 +1,16 @@
-#semester-view{
+#term-view{
   display: flex;
   overflow-x: auto;
 
   max-width: 100vw;
 }
 
-#semester-view::-webkit-scrollbar
+#term-view::-webkit-scrollbar
 {
     height: 0.4em;
 }
 
-#semester-view::-webkit-scrollbar-thumb
+#term-view::-webkit-scrollbar-thumb
 {
     border-radius: 2em;
     background-color: #1a191b;
