--- a/client/src/components/Term/Term.css
+++ b/client/src/components/Term/Term.css
@@ -1,20 +1,20 @@
 .term-container {
+  height: 75vh;
   display: flex;
   flex-direction: column;
-  overflow: auto;
-  width: 7em;
+  min-width: 10%;
+  max-width: 15%;
 }
 
-.term-heading {
+ .term-heading {
   color: #84bd00;
   align-self: center;
   font-weight: lighter;
   margin-bottom: 0.1em;
 }
 
-.courses-container{
-  display: flex;
+ .courses-container {
+  height: 65vh;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-}
+  max-width: 100%;
+} 
