just commiting to have a copy. Form Validation (create Account menu)

--- a/client/src/components/Input/input.css
+++ b/client/src/components/Input/input.css
@@ -55,5 +55,11 @@ ol.course-list{
     height:17em; 
 }
 
+.warning-msg{
+    color: red;
+    font-weight: normal;
+    /* text-transform: uppercase; */
+}
+
 
 
