--- a/client/src/components/WarningSnackbar/WarningSnackbar.css
+++ b/client/src/components/WarningSnackbar/WarningSnackbar.css
@@ -14,7 +14,6 @@
   margin-left: auto;
   margin-right: auto;
   display: none;
-
 }
 
 .warning-snackbar-wrapper.show {
@@ -47,14 +46,18 @@
 
 #close-snackbar-btn {
   cursor: pointer;
+  position: absolute;
+  font-size: 1.5em;
+  right: 0.5em;
+  top: 0.1em;
 }
 
 .closebtn-container {
   position: relative;
-  
 }
 
 .warning-list-container {
+  padding-top: 1em;
   overflow-y: scroll;
   max-height: 20em;
 
