Validation logic almost completed. Checks to see if email is valid, and if password(s) have a length of 5 before allowing user to submit.

--- a/client/src/components/Input/input.css
+++ b/client/src/components/Input/input.css
@@ -56,10 +56,17 @@ ol.course-list{
 }
 
 .warning-msg{
-    color: red;
+    color:  red;
     font-weight: normal;
+    font-size: 1em;
+    /* background-color: #333035; */
+    border: none;
+    width: 31em;
+    resize: none;
+    list-style-type: none;
     /* text-transform: uppercase; */
 }
+
 
 
 
