--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -32,6 +32,44 @@ body{
     border: none;
 }
 
+/* THIS BTN IS TO OPEN DIFFERENT MENU THEN WHAT IS ACTIVE*/
+.open-diff-menubtn{
+    background:none;
+    border:none; 
+    cursor: pointer;
+    color: #84bd00;
+    font-size: 1em;
+    display: block;
+}
+
+a{
+    color: #84bd00;
+}
+a:hover {
+    color: #afda77;
+}
+/* THIS BTN IS TO CREATE AN ACCOUNT FOR USER */
+.create-accountbtn{
+    background:none;
+    margin: 2em auto;
+    border-color: #84bd00;
+    padding:1em 2em;
+    cursor: pointer;
+    color: #84bd00;
+    font-size: 1em;
+    display: block;
+}
+
+.create-accountbtn:hover {
+    /* background-color: #84bd00;  */
+    color: #afda77;
+    border-color: #afda77;
+}
+
+.create-accountbtn:disabled{
+    cursor: not-allowed;
+}
+
 .deafultbtn{
     width: 50%;
     padding: 1em 1em;
@@ -57,44 +95,15 @@ body{
 
 }
 
-/* THIS BTN IS TO OPEN DIFFERENT MENU THEN WHAT IS ACTIVE*/
-.open-diff-menubtn{
-    background:none;
-    border:none; 
-    cursor: pointer;
-    color: #84bd00;
-    font-size: 1em;
-    display: block;
-}
-
-a{
-    color: #84bd00;
-}
-a:hover {
-    color: #afda77;
-}
-
-/* THIS BTN IS TO CREATE AN ACCOUNT FOR USER */
-.create-accountbtn{
-    background:none;
-    margin: 2em auto;
-    border-color: #84bd00;
-    padding:1em 2em;
-    cursor: pointer;
-    color: #84bd00;
-    font-size: 1em;
-    display: block;
-}
-
-.create-accountbtn:hover {
-    /* background-color: #84bd00;  */
-    color: #afda77;
-    border-color: #afda77;
-}
-
-.create-accountbtn:disabled{
-    cursor: not-allowed;
-}
+.overlay {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 
 /* .invalid{
     border: 1px solid red;
