--- a/client/src/components/WarningSnackbar/WarningSnackbar.css
+++ b/client/src/components/WarningSnackbar/WarningSnackbar.css
@@ -68,7 +68,7 @@
   margin: 0;
   overflow: hidden;
   padding: 0 1em;
-  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .warning-message-container p {
