changed the background of Note Area.. Previous commit to this branch was for validation for Create Account Menu and Login Menu...

--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -115,6 +115,15 @@ a:hover {
     z-index: -1;
   }
 
-/* .invalid{
-    border: 1px solid red;
-} */
+
+.warning-msg{
+    color:  red;
+    /* font-weight: normal;
+    font-size: 1em;
+    /* background-color: #333035; */
+    /* border: none;
+    width: 31em;
+    resize: none;  */
+    list-style-type: none;
+    /* text-transform: uppercase; */
+}
