--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -32,7 +32,7 @@ body{
     border: none;
 }
 
-.deafultbtn{
+.defaultbtn {
     width: 50%;
     padding: 1em 1em;
     margin: 2em auto;
@@ -47,12 +47,12 @@ body{
 
 }
 
-.deafultbtn:hover {
+.defaultbtn:hover {
     background-color: #84bd00; 
     color: black;
 }
 
-.deafultbtn:disabled{
+.defaultbtn:disabled {
     cursor: not-allowed;
 
 }
