--- a/client/src/components/Term/Term.css
+++ b/client/src/components/Term/Term.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   min-width: 7em;
   max-width: 15%;
+  position: relative;
 }
 
  .term-heading {
@@ -17,4 +18,33 @@
   height: 65vh;
   justify-content: center;
   max-width: 100%;
-} 
+}
+
+.remove-term {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 0.75em;
+}
+
+.remove-term.container {
+  display: none;
+  font-size: 0.5em;
+  background-color: red;
+  border-radius: 1.5em;
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+}
+
+.term-container:hover > .remove-term.container {
+  display: inline-block
+}
+
+.remove-term.container:hover {
+  color: grey;
+  background-color: darkred;
+  cursor: pointer;
+}
