This code will be migrated to latest dev branch

--- a/client/src/components/Planner/PlannerArea.css
+++ b/client/src/components/Planner/PlannerArea.css
@@ -1,7 +1,7 @@
 #semester-view{
   display: flex;
-  overflow-x: auto;
-
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   max-width: 100vw;
 }
 
