created an admin interface to be linked to admin portal

--- a/client/src/components/Login/LoginInterface.css
+++ b/client/src/components/Login/LoginInterface.css
@@ -10,6 +10,13 @@ body{
    
 }
 
+.admin-txt {
+    text-align: center;
+    color: #c5980f;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
 .menu{
     background-color: #201e21;
     width: 50%;
