Add breakdown of sidebar and add user info to admin screen.

--- a/client/src/containers/Main.css
+++ b/client/src/containers/Main.css
@@ -5,10 +5,10 @@
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 1fr 6fr 4fr;
   grid-template-areas: 
-    "student-info planner-header"
-    "student-info planner"
-    "plan-list planner"
-    "note-area planner";
+    "sidebar planner-header"
+    "sidebar planner"
+    "sidebar planner"
+    "sidebar planner";
   background-color: #1a191b;
   position: relative;
   color: #e4e4e4;
@@ -25,19 +25,8 @@
   background-color: #1a191b;
 }
 
-#plan-list {
-  grid-area: plan-list;
-  background-color: #1a191b;
-}
-
-#student-info {
-  grid-area: student-info;
-  background-color: #1a191b;
-}
-
-#note-area {
-  grid-area: note-area;
-  background-color: #1a191b;
+.sidebar {
+  grid-area: sidebar;
 }
 
 .centered {
@@ -51,7 +40,6 @@
   margin: 0 1em 0 1em;
   padding: 1em 0 1em 0;
   border-bottom: lightgrey 1px solid;
-  height: 100%;
 }
 
 .sidebar-info-area > * {
@@ -64,11 +52,11 @@
   color: #e4e4e4;
 }
 
-.sidebar-info-area-end {
+.sidebar > .sidebar-info-area:last-child {
   box-sizing: border-box;
   margin: 0 1em 0 1em;
   padding: 1em 0 1em 0;
-  height: 100%;
+  border: none;
 }
 
 .sidebar-header {
@@ -105,11 +93,11 @@
   background-color: #262427;
   color: #e4e4e4;
   border: none;
-  height: 71%;
+  height: 8em;
   width: 100%;
   resize: none;
-  box-sizing: border-box;
   font-size: 1em;
+  font-family: inherit;
 }
 
 .focus-element:focus {
@@ -119,12 +107,6 @@
 
 .focus-element {
   box-sizing: border-box;
-}
-
-.student-buttons-container {
-  position: absolute;
-  /* min-width: 130px; */
-  bottom: 1em;
 }
 
 *:focus {
