--- a/client/src/components/Planner/PlannerArea.css
+++ b/client/src/components/Planner/PlannerArea.css
@@ -26,7 +26,6 @@
 .floating-icon {
   position: absolute;
   font-size: 2em;
-
 }
 
 .floating-icon.remove-course {
@@ -37,4 +36,11 @@
 .floating-icon.add-term {
   top: 1em;
   right: 2em;
+}
+
+.add-term p {
+  position: absolute;
+  right: -2rem;
+  font-size: 1rem;
+  width: 5em;
 }
