--- a/client/src/components/ScrollButton/ScrollButton.css
+++ b/client/src/components/ScrollButton/ScrollButton.css
@@ -1,3 +1,7 @@
 .left, .right{
-  background-color: red;
+  background-color: #1a191b;
+  color: #e4e4e4;
+  border: none;
+  justify-items: center;
+  width: 100%;
 }
