--- a/client/src/components/PlanName/PlanName.css
+++ b/client/src/components/PlanName/PlanName.css
@@ -1,5 +1,5 @@
 #plan-name-heading {
-  display: inline-block;
+  display: block;
   margin: 0;
   border: 1px solid #1a191b;
   background-color: #1a191b;
@@ -7,27 +7,20 @@
   font-size: 1.5em;
   font-weight: normal;
   margin: 0;
-}
-
-input#plan-name-heading {
-  margin: 0;
-  display: block;
-  -webkit-appearance: none;
-  text-align: start;
+  min-width: 5em;
+  min-height: 1em;
   color: #e4e4e4;
-  border: 1px solid grey;
-  border-radius: 0.25em;
-  background-color: black;
-  box-sizing: border-box;
-  height: 1.5em;
-  font-weight: normal;
-  font-size: 1.5em;
-  font-family: Helvetica;
+  -webkit-appearance: none;
 }
 
-h3#plan-name-heading:hover {
-  border: 1px solid grey;
-  border-radius: 0.25em;
+#plan-name-heading:focus {
   background-color: black;
-  box-sizing: border-box;
+  border-radius: 0.25em;
+  border: 1px solid grey;
+}
+
+#plan-name-heading:hover {
+  background-color: black;
+  border-radius: 0.25em;
+  border: 1px solid grey;
 }
