Add logic to save plan courses and terms.

--- a/client/src/components/PlanList/PlanList.css
+++ b/client/src/components/PlanList/PlanList.css
@@ -8,6 +8,10 @@
 
 .plan-list-item {
   position: relative;
+  min-height: 1em;
+  min-width: 2em;
+  font-size: 1em;
+  max-height: 1em;
 }
 
 #plan-list h4 {
