--- a/client/src/components/PlanList/PlanList.css
+++ b/client/src/components/PlanList/PlanList.css
@@ -3,7 +3,8 @@
   color: #84bd00;
 }
 .plan-list-item:hover > .delete-button.container {
-  display: inline-block
+  display: inline-block;
+  color: #e4e4e4;
 }
 
 .plan-list-item {
