--- a/client/src/components/PlanList/PlanList.css
+++ b/client/src/components/PlanList/PlanList.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   color: #84bd00;
 }
-.plan-list-item:hover > .delete-button.container {
+.plan-list-item:hover > .delete-button {
   display: inline-block;
   color: #e4e4e4;
 }
@@ -11,9 +11,16 @@
   position: relative;
   min-height: 1em;
   min-width: 2em;
+  max-width: 10em;
   font-size: 1em;
   max-height: 1em;
 }
+.plan-list-item p {
+  margin: 0;
+  overflow: hidden;
+  max-height: 1em;
+}
+
 
 #plan-list h4 {
   margin-bottom: 0.2em;
