--- a/client/src/components/Planner/PlannerArea.css
+++ b/client/src/components/Planner/PlannerArea.css
@@ -35,10 +35,14 @@
   right: 2em;
 }
 
-.floating-icon.add-term {
+/* .floating-icon.add-term {
   top: 1em;
   right: 2em;
 }
+.floating-icon.add-term:hover p {
+  display: block;
+
+} */
 
 .scroll-btn-hide{
   display: none;
@@ -50,7 +54,6 @@
   max-width: 5em;
   height: 1.5em;
   top: 50%;
-  opacity: 0.5;
 }
 
 .scroll-btn.right{
@@ -59,4 +62,18 @@
 
 .scroll-btn.left{
   left: 2em;
+}
+
+/* .add-term p {
+  position: absolute;
+  right: -2rem;
+  font-size: 1rem;
+  width: 5em;
+  display: none;
+  top: 1.5rem;
+} */
+
+
+.arrow {
+  z-index: 6;
 }
