--- a/client/src/containers/Main.css
+++ b/client/src/containers/Main.css
@@ -123,3 +123,12 @@ h3 {
   font-size: 1.25em;
   font-weight: bold;
 }
+
+.add-term {
+  top: 1em;
+  right: 2em;
+  background: none;
+  border: none;
+  color: #84bd00;
+  font-size: 1em;
+}
